AKU-436: Notifications scroll off screen - Fix scrolling off screen

--- a/aikau/src/main/resources/alfresco/notifications/css/AlfNotification.css
+++ b/aikau/src/main/resources/alfresco/notifications/css/AlfNotification.css
@@ -2,7 +2,7 @@
 .alfresco-notifications-AlfNotification {
    left: 0;
    opacity: 0;
-   position: absolute;
+   position: fixed;
    right: 0;
    top: 52.5%;
    transition: opacity .2s ease-out, top .2s ease-out;
